k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: notes-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: savvydhar/frontend:v4

        ports:
        - containerPort: 5173

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "300m"
            memory: "256Mi"
